# ngsHypre

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
demos/: example1.py  hypre-Poisson-p2.py  hypre-Poisson.py
src/: __init__.py  hypre_precond.cpp  hypre_precond.hpp  ngsHypre.cpp
